--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 signrequest-python-client
 =========================
 
-**WARNING:** Currently in development, not to be used in production.
+**WARNING:** Not officially supported, use at your own risk.
